Made collision conserve mass and momentum. Masses are combined when they collide.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
     <head>
-        <title>3 Body Problem</title>
+        <title>N Body Simulation</title>
         <link rel="stylesheet" type="text/css" href="style.css" />
     </head>
 
     <body>
-        <h1>The 3 Body Problem</h1>
+        <h1>N Body Simulation</h1>
         <span>Simulation Speed</span>
         <input type="range" min="1" max="10000" value="1" class="slider" id="simSpeed">
         <canvas id="myCanvas" width="1000" height="1000"></canvas>
